added MultiTargetFrameworks net5

--- a/src/EFCore.BaseEntity.Common/EFCore.BaseEntity.Common.csproj
+++ b/src/EFCore.BaseEntity.Common/EFCore.BaseEntity.Common.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <TargetFrameworks>net5.0;net6.0</TargetFrameworks>
     <Nullable>enable</Nullable>
 
     <PackageId>EFCore.BaseEntity.Common</PackageId>
@@ -10,7 +9,7 @@
     <Authors>Burak Quartz</Authors>
     <Company>BurakQuartz</Company>
 
-    <PackageTags>.Net6.0, Migration, Common, Base Class, Generic Type</PackageTags>
+    <PackageTags>.Net5.0, Migration, Common, Base Class, Generic Type</PackageTags>
     <Description>
     Compatible with generic type. The Id field in BaseEntity will also be the [Key] field for EF-Migration.
     </Description> 
